style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body{
    font-family: sans-serif;
    background-color: #e3e3db;
}

body {
  overflow-y: hidden; /* Hide vertical scrollbar */
  overflow-x: hidden; /* Hide horizontal scrollbar */
}

p{
    position: relative;
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

#hero{
    position: relative;
    width: 100vw;
    height: 100svh;
    background: linear-gradient(to right, #000000, #1d5c26, #000000);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
   
}

/* .progress-bar{
    position: relative;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    width: 25vw;
    padding: 2em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #ffbb00;
} */

.video-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    z-index: 0; /* Ensure it stays behind all content */
}

.video-container video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    opacity: 0.5;
    pointer-events: none;
}


nav, footer{
    width: 100vw;
    padding: 1.5em;
    display: flex;
    justify-content: space-between;
    color: #fff;
    mix-blend-mode: difference;
    z-index: 2;
}

footer{
    justify-content: flex-end;
    gap: 1em;
}

.header{
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.header h1{
    width: 100%;
    text-align: center;
    text-transform: uppercase;
    font-size: 7vw;
    line-height: 0.85;
    letter-spacing: -0.075rem;
    color: #fff;
}

.header p{
    margin-top: 1em;
    color: #44ff00;
}

.coordinates{
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    width: 100vw;
    padding: 1.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #44ff00;
}

.logo{
    position: absolute;
    bottom: 0;
    padding: 1.5em;
    left: 50%;
    display: flex;
    transform: translateX(-50%);
    will-change: transform;
    color: #ffffff;
    mix-blend-mode: difference;
    z-index: 2;
}

/* .char.anim-out h1{
    position: relative;
    will-change: transform;
} */

.header h1, .header p, .coordinates p, .char.anim-out{
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
}

.header span, .coordinates p span{
    position: relative;
    display: block;
    transform: translateY(100%);
    will-change: transform;
}

@media(max-width: 900px){
    p{
        font-size: 13px;
    }

    .progress-bar{
        justify-content: flex-end;
    }

    .progress-bar p:nth-child(1){
        display: none;
    }

    .header h1{
        font-size: 10vw;
    }

    .coordinates{
        top: 65%;
        justify-content: center;
        gap: 1em;
        color: #fff;
        opacity: 0.5;
    }
}

#loader{
    height: 100%;
    width: 100%;
    background-color: #000;
    position: fixed;
    z-index: 999;
    top: 0;
    transition: all ease 1.5s;
    display: flex;
    align-items: center;
    justify-content: center;
}

#loader h1{
    color: transparent;
    font-size: 7vw;
    background: linear-gradient(to right, rgb(64, 255, 0), rgb(47, 114, 20));
    -webkit-background-clip: text;
    position: absolute;
    opacity: 0;
    animation-name: load;
    animation-duration: 1.1s;
    animation-delay: 1s;
    animation-timing-function: linear;
}

#loader h1:nth-child(2){
  animation-delay: 2s;
}

#loader h1:nth-child(3){
  animation-delay: 3s;
}

@keyframes load{
    0%{
        opacity: 0;
    }
    10%{
        opacity: 1;
    }
    90%{
        opacity: 1;
    }
    100%{
        opacity: 0;
    }
}

#nav{
  padding: 1.5vw 2vw;
    width: 100%;
  /*   background-color: rgb(3, 3, 3); */
    display: flex;
    align-items: center;
    position: relative;
    z-index: 100;
    justify-content: space-between;
}

#navpart2{
    display: flex;
    align-items: center;
    gap: 1vw;
}

#navpart2 h3{
    padding: 10px 20px;
    border: 1px solid #ffffff;
    border-radius: 50px;
    font-weight: 600;
    color: #ffffff;
    font-size: 18px;
    position: relative;
    transition: all ease 0.4s;
    overflow: hidden;
}

#navpart2 h3::after{
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: rgb(77, 243, 80);
    left: 0;
    bottom: -100%;
    border-radius: 50%;
    transition: all ease 0.4s;
}

#navpart2 h3:hover::after{
    bottom: 0;
    border-radius: 0;
}

#navpart2 h3 a{
    color: #ffffff;
    text-decoration: none;
    z-index: 9;
    position: relative;
}

#navpart2 h3:hover a{
    color: #000000;
}

#nav img{
    height: 5vw;
}

